<?xml version="1.0"?>
<package format="3">
  <name>team_a_obstacle_detector</name>
  <version>0.0.0</version>
  <description>The team_a_obstacle_detector package</description>
  <maintainer email="amsl@todo.todo">amsl</maintainer>

  <license>todo</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_cmake</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <!-- 追加 -->
  <depend>sensor_msgs</depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roomba_500driver_meiji</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>